[gd_scene load_steps=5 format=3 uid="uid://puog6aa0ae5r"]

[ext_resource type="Script" path="res://Tile.gd" id="1_lrrfq"]
[ext_resource type="Texture2D" uid="uid://duuacj3uvhcj8" path="res://sprites/bkg.png" id="2_yop3b"]
[ext_resource type="Texture2D" uid="uid://dikwhxa1vuvfp" path="res://sprites/highlight.png" id="3_5rkdo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2snmy"]
size = Vector2(16, 16)

[node name="Tile" type="Node2D"]
script = ExtResource("1_lrrfq")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_yop3b")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2snmy")

[node name="Highlight" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_5rkdo")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
